--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -31,6 +32,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Dictionary</title>
+    <script
+      src="https://kit.fontawesome.com/395c1b9ad8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
